# super-soccer-showdown

./: .mise.toml  Dockerfile  README.md  app.py  errors.py  fly.toml  poke_cache.json  pyproject.toml
api/: errors.py
api/responses/: base_response.py
api/service/: team_assembler_service.py  team_battle_service.py
assembler/: team.py
client/: api_client.py  pokemon_api_client.py  star_wars_api_client.py
models/: player.py  team.py
provider/: player_provider.py  poke_player_provider.py  star_wars_player_provider.py
tests/: test_player_provision.py  test_team_assembly.py
