[project]
name = "super-soccer-showdown"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "httpx>=0.28.1",
    "orjson>=3.10.16",
    "pydantic>=2.11.0",
]

[tool.ruff]
line-length = 100

[dependency-groups]
dev = ["pytest>=8.3.5", "pytest-asyncio>=0.26.0"]
